# clipbaordApp

./: .replit  README.md  cli_run.py  clipboard_adapter.py  clipboard_app.py  clipboard_manager.py  database.py  db_test.py  gui_test.py  keyboard_handler.py  main.py  models.py  pyproject.toml  quick_paste_popup.py  render.yaml  replit.nix  requirements-vercel.txt  requirements.txt  tag_manager.py  test_app.py  theme_manager.py  tkinter_gui.py  utils.py  vercel.json  vercel_setup.py  web_app.py
api/: index.py
attached_assets/: Pasted--Build-a-cross-platform-Python-application-with-optional-browser-extension-capability-that-acts-as-1744005768478.txt  Pasted--C-Program-Files-Java-jdk-21-bin-java-exe-XX-TieredStopAtLevel-1-Dspring-output-ansi-enabled-alw-1744014732232.txt  Pasted-Apr-07-13-04-19-81-GET-500-clipbaord-ht4l450jy-kagabolucky72-gmailcoms-projects-vercel-app-favi-1744023906373.txt  Pasted-Apr-07-13-14-04-27-GET-500-clipbaord-hk8qbfs9v-kagabolucky72-gmailcoms-projects-vercel-app-favi-1744024481355.txt  Pasted-Apr-07-13-37-08-31-GET-500-clipbaord-dhjwxy4n0-kagabolucky72-gmailcoms-projects-vercel-app-20-1744025859662.txt  Pasted-Apr-07-13-44-29-94-GET-500-clipbaord-e6q518n10-kagabolucky72-gmailcoms-projects-vercel-app-yt-1744026332624.txt
browser_extension/: EXTENSION.md  README.md  image_descriptions.txt  manifest.json  quick_paste_popup_mockup.html
browser_extension/examples/: README.md  api_interaction.js
browser_extension/popup/: popup.html  popup.js  settings.html  settings.js
ui/: history_viewer.py  popup.py  settings_dialog.py  system_tray.py
(+8 files in other folders)
